Fix test and Gradle warning.