@@ -83,6 +83,7 @@ tasks.withType(JavaExec) {
 }
 
 test {
+    jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
     testLogging {
         showStandardStreams = true
         exceptionFormat = "full"
